<resources>
    <string name="app_name">Be The Coach</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_synchronization">Coaching Synchronization</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_coaching_option">Coaching Guideline Option</string>
    <string name="title_activity_merchandiser">FA/SA/Merchandiser Coaching Guidelines</string>
    <string name="title_activity_dsr">DSR Coaching Guidel</string>
    <string name="title_activity_coachee_history">Coachee History</string>
    <string name="title_activity_coaching_summary_merchandiser">Coaching Summary</string>
    <string name="title_activity_rsmcoaching">RSM Coaching Guideline</string>
    <string name="title_login">Coaching at Your Fingertips\n“Coach the team regularly, for best performance”</string>
    <string name="description_coaching_option">**The following questions is a guidelines for you to coach the team to develop better</string>
    <string name="dsr_description">**The following questions is a guidelines for you to coach the team to develop better in Selling Skills (Basic Call Procedure)</string>
    <string name="title_bahasa_sebelum_kunjungan">SEBELUM KUNJUNGAN\n<i>Perencanaan &amp; Persiapan</i></string>
    <string name="title_bahasa_saat_kunjungan">PADA SAAT KUNJUNGAN\n<i>Pembukaan, Store Check, Presentasi, Penutup, Merchandising</i>\n<i>(Tandai Jika Mengetahui)</i></string>
    <string name="title_bahasa_setelah_kunjungan">SETELAH KUNJUNGAN\n<i>Finalisasi &amp; Evaluasi</i></string>
    <string name="title_english_sebelum_kunjungan">BEFORE VISIT\n<i>Planning &amp; Preparatin</i></string>
    <string name="title_english_saat_kunjungan">DURING VISIT\n<i>Opening, Store Check, Presentation, Closing, Merchandising</i></string>
    <string name="title_english_setelah_kunjungan">AFTER VISIT\n<i>Finalization &amp; Evaluation</i></string>
    <string name="title_activity_dsrsaat">DSR Coaching Guideline</string>
    <string name="title_activity_dsrsetelah">DSR Coaching Guideline</string>
    <string name="title_activity_coaching_summary">Coaching Summary</string>
    <string name="bahasa_dsr_sebelum_1">1. Menganalisa kembali tujuan dari kunjungan</string>
    <string name="bahasa_dsr_sebelum_2">2. Men-cek stock availability yang ada di gudang</string>
    <string name="bahasa_dsr_sebelum_3">3. Mengetahui dan memahami promo-promo yang sedang berlangsung</string>
    <string name="bahasa_dsr_sebelum_4">4. Mempersiapkan tools untuk kunjungan</string>
    <string name="bahasa_dsr_sebelum_4a">\t a. TRC/LE Mobility, Alat Tulis, dan Kalkulator</string>
    <string name="bahasa_dsr_sebelum_4b">\t b.Kartu Nama (bila ada)</string>
    <string name="bahasa_dsr_sebelum_4c">\t c.Katalog Produk</string>
    <string name="bahasa_dsr_sebelum_4d">\t d.Marketing Program</string>
    <string name="bahasa_dsr_sebelum_4e">\t e.Price List</string>
    <string name="bahasa_dsr_sebelum_4f">\t f. Contoh Produk NPI (bila ada)</string>
    <string name="english_dsr_sebelum_1">1. Re-analyze visit objective</string>
    <string name="english_dsr_sebelum_2">2. Check warehouse stock availability</string>
    <string name="english_dsr_sebelum_3">3. Know and understand the ongoing promo</string>
    <string name="english_dsr_sebelum_4">4. Prepare tools  for visit</string>
    <string name="english_dsr_sebelum_4a">\t a. TRC/LE Mobility, Stationery, and Calculator</string>
    <string name="english_dsr_sebelum_4b">\t b. Name Card</string>
    <string name="english_dsr_sebelum_4c">\t c. Product Catalog</string>
    <string name="english_dsr_sebelum_4d">\t d. Marketing Program</string>
    <string name="english_dsr_sebelum_4e">\t e. Price List</string>
    <string name="english_dsr_sebelum_4f">\t f. NPI Product Example (If any)</string>
    <string name="bahasa_dsr_saat_1">1. Perkenalan</string>
    <string name="bahasa_dsr_saat_2">2. Check stock produk UFS baik yang sudah didisplay di shelf maupun di gudang</string>
    <string name="bahasa_dsr_saat_3">3. Presentasi</string>
    <string name="bahasa_dsr_saat_3a">\t a. Menawarkan penambahan stock (taking order) pada customer</string>
    <string name="bahasa_dsr_saat_3b">\t b. Menawarkan penambahan SKU baru (NPI)</string>
    <string name="bahasa_dsr_saat_3c">\t c. Presentasi produk: menguasai keunggulan produk</string>
    <string name="bahasa_dsr_saat_3d">\t d. Presentasi harga : menguasai harga produk yang ditawarkan </string>
    <string name="bahasa_dsr_saat_3e">\t e. Presentasi program: menguasai program-program yang sedang berlangsung</string>
    <string name="bahasa_dsr_saat_4">4. Penutupan: merekonfirmasi hasil kunjugan (jumlah orderan, dll)</string>
    <string name="bahasa_dsr_saat_5">5. Melakukan merchandising</string>
    <string name="bahasa_dsr_saat_6">6. Mengisi TRC / LE mobility </string>
    <string name="english_dsr_saat_1">1. Introduction</string>
    <string name="english_dsr_saat_2">2. Stock check for UFS product, either on shelf or warehouse</string>
    <string name="english_dsr_saat_3">3. Presentation</string>
    <string name="english_dsr_saat_3a">\t a. Offers stock addition (taking order) to customer</string>
    <string name="english_dsr_saat_3b">\t b. Offers new SKU (NPI)</string>
    <string name="english_dsr_saat_3c">\t c. Product Presentation : mastery of product advantages</string>
    <string name="english_dsr_saat_3d">\t d. Price Presentation : mastery of product price</string>
    <string name="english_dsr_saat_3e">\t e. Program presentation : mastery of ongoing programs</string>
    <string name="english_dsr_saat_4">4. Closing: reconfirms visit result (total order, etc)</string>
    <string name="english_dsr_saat_5">5. Conduct merchandising</string>
    <string name="english_dsr_saat_6">6. Fills TRC / LE Mobility</string>
    <string name="bahasa_dsr_setelah_1">1. Melakukan sync LE Mobility atau menginformasikan semua order ke Admin DMS</string>
    <string name="bahasa_dsr_setelah_2">2. Merangkum hasil penjualan hari itu dan mencatatkan di Wall Report/Laporan Dinding</string>
    <string name="english_dsr_setelah_1">1. Synchronizing LE Mobility or inform every order to Admin DMS</string>
    <string name="english_dsr_setelah_2">2. Summarize total sales on that day &amp; Write it down in Wall Report</string>
    <string name="bahasa_summary_1">Tuliskan apa yang telah dilakukan dengan baik (max. 3hal)</string>
    <string name="bahasa_summary_2">Tuliskan apa yang dapat dilakukan dengan lebih baik (max.3hal)</string>
    <string name="bahasa_summary_3">Tuliskan apa yang perlu dilakukan untuk mendukung point 2 di atas (max.3action)</string>
    <string name="english_summary_1">Write what has been done well? (max. 3pages)</string>
    <string name="english_summary_2">Write what can be improved?(max. 3pages)</string>
    <string name="english_summary_3">Write what needs to be done to support the 2 points above (max. 3action)</string>
    <string name="bahasa_fa_title_1"><b>1. ON SHELF AVAILABILITY (OSA) &amp; PRODUCT DISPLAY</b></string>
    <string name="bahasa_fa_1a">\t\ta. Apakah produk tersedia di Shelf?</string>
    <string name="bahasa_fa_1b">\t\tb. Apakah semua Front Pack menghadap kedepan?</string>
    <string name="bahasa_fa_title_2"><b>2. POINT OF SALES (POS)</b></string>
    <string name="bahasa_fa_2a">\t\ta. Materi POS apa yang tersedia saat ini dari marketing?</string>
    <string name="bahasa_fa_2b">\t\tb. Bila ada POS material dari Trade Marketing, apakah sudah di implementasi?</string>
    <string name="bahasa_fa_title_3"><b>3. FA/SA/Merchandiser Performance</b></string>
    <string name="bahasa_fa_3a">\t\ta. Apakah FA/SA/Merchandiser telah menjelaskan produk sesuai dengan Selling Story ke customer?\n<i>(bila tidak ada customer, tanyakan langsung keunggulan produk tersebut)</i></string>
    <string name="bahasa_fa_title_4"><b>4. PRODUCT DISTRIBUTION (PD)</b></string>
    <string name="bahasa_fa_4a">\t\ta. Apakah Price Tag produk telah terpampang di Shelf (ter-listing)</string>
    <string name="bahasa_fa_title_5"><b>5. PROMO COMPLIANCE (PC)</b></string>
    <string name="bahasa_fa_5a">\t\ta. Apakah Price Tag produk telah terpampang di Shelf (ter-listing)</string>
    <string name="bahasa_fa_title_6"><b>6. RELATIVE PRICE INDEX (RPI)</b></string>
    <string name="bahasa_fa_6a">\t\ta. Berapakah produk tersebut dijual di Store? (A)</string>
    <string name="bahasa_fa_6b">\t\tb. Berapakah ukuran produknya? (gram atau ml) (B)</string>
    <string name="bahasa_fa_title_6_1">\t\t<b>PRODUK KOMPETITOR</b></string>
    <string name="bahasa_fa_title_6_2">\t\t<b>RELATIVE PRICE INDEX (RPI)</b></string>
    <string name="bahasa_fa_6c">\t\tc. Berapakah harga kompetitor produk sejenis di Store tersebut? (C)</string>
    <string name="bahasa_fa_6d">\t\td. Berapakah ukuran produk kompetitor tersebut? (gram atau ml) (D)</string>
    <string name="bahasa_rpi">\t\t<i>*RPI = Produk UFS (ml/gr) : Produk Kompetitor (ml/g)= (A/B) : (C/D)</i></string>
    <string name="bahasa_fa_title_7"><b>7. SHARE OF SPACE (SOS)</b></string>
    <string name="bahasa_fa_7a">\t\ta. Berapa jumlah tier yang digunakan untuk men-display produk UFS di Shelf?</string>
    <string name="bahasa_fa_title_7_1">\t\t<b>PRODUK KOMPETITOR</b></string>
    <string name="bahasa_fa_7b">\t\tb. Berapa jumlah tier yang digunakan competitor sejenis untuk men-display produknya di Shelf</string>
    <string name="bahasa_fa_7c">\t\tc. Apakah SOS (jumlah tier) produk UFS lebih dari produk competitor?</string>
    <string name="english_fa_title_1"><b>1. ON SHELF AVAILABILITY (OSA) &amp; PRODUCT DISPLAY</b></string>
    <string name="english_fa_1a">\t\ta. Does all product available on Shelf?</string>
    <string name="english_fa_1b">\t\tb. Does all Front Pack face forward?</string>
    <string name="english_fa_title_2"><b>2. POINT OF SALES (POS)</b></string>
    <string name="english_fa_2a">\t\ta. What POS material is available from marketing?</string>
    <string name="english_fa_2b">\t\tb. If there are POS material from Trade Marketing, is it implemented?</string>
    <string name="english_fa_title_3"><b>3. FA/SA/Merchandiser Performance</b></string>
    <string name="english_fa_3a">\t\ta. Has the FA/SA/Merchandiser explained about product according to Selling Story to the customer?\n<i>(if there is no customer, ask the advantage of the product)</i></string>
    <string name="english_fa_title_4"><b>4. PRODUCT DISTRIBUTION (PD)</b></string>
    <string name="english_fa_4a">\t\ta. Is the product Price Tag showed on Shelf (listed)</string>
    <string name="english_fa_title_5"><b>5. PROMO COMPLIANCE (PC)</b></string>
    <string name="english_fa_5a">\t\ta. Is the product Price Tag showed on Shelf (listed)</string>
    <string name="english_fa_title_6"><b>6. RELATIVE PRICE INDEX (RPI)</b></string>
    <string name="english_fa_6a">\t\ta. How much is the product price at the Store? (A)</string>
    <string name="product_1">Blue Band MCM (kg)</string>
    <string name="product_2">Bango Kecap Manis (kg)</string>
    <string name="product_3">PBlue Band Original (kg)</string>
    <string name="product_4">Knorr Chicken Powder Refill (kg)</string>
    <string name="product_5">Royco Chicken (kg)</string>
    <string name="product_6">Knorr Mashed Potato (kg)</string>
    <string name="product_7">Knorr Oyster Sauce Bottle (gr)</string>
    <string name="product_8">Sari Wangi Celup</string>
    <string name="product_9">Royco Ayam Kuning (gr)</string>
    <string name="product_10">Royco Rendang (gr)</string>
    <string name="size_1">15</string>
    <string name="size_2">1.7</string>
    <string name="size_3">4.5</string>
    <string name="size_4">1</string>
    <string name="size_5">1</string>
    <string name="size_6">4</string>
    <string name="size_7">975</string>
    <string name="size_8">Jumbo</string>
    <string name="size_9">600</string>
    <string name="size_10">525</string>
</resources>