<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context="unilever.coachingform.MerchandiserActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/bahasa_fa_title_1"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_1a"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_1a"
                style="@style/fa_radio"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_1b"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_1b"
                style="@style/fa_radio"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_2"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_2a"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_2a"
                style="@style/fa_radio"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_2b"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_2b"
                style="@style/fa_radio"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_3"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_3a"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_3a"
                style="@style/fa_radio"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_4"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_4a"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_4a"
                style="@style/fa_radio"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_5"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_5a"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_5a"
                style="@style/fa_radio"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_6"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_6a"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_6a"
                android:hint="rupiah"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_6b"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_6b"
                android:hint="gr/ml"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_title_6_1"
                android:layout_width="0px"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/competitor_1"
                android:hint="Product"
                android:gravity="center_horizontal"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_6c"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_6c"
                android:hint="rupiah"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_6d"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_6d"
                android:hint="gr/ml"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_6_2"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_rpi"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_rpi"
                android:editable="false"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahasa_fa_title_7"
            style="@style/fa_question_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_7a"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_7a"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_title_7_1"
                android:layout_width="0px"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textSize="15dp" />
            <EditText
                android:id="@+id/competitor_2"
                android:hint="Product"
                android:gravity="center_horizontal"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_7b"
                style="@style/fa_question"/>
            <EditText
                android:id="@+id/fa_7b"
                style="@style/fa_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bahasa_fa_7c"
                style="@style/fa_question"/>
            <RadioButton
                android:id="@+id/fa_7c"
                style="@style/fa_radio"/>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Next"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>