<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="unilever.coachingform.MerchandiserActivity">
    <RelativeLayout
        android:id="@+id/sub_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            style="@style/title_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="In Store"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/description_coaching_option"
            android:layout_below="@+id/title"
            android:gravity="center_horizontal"
            android:textColor="@color/orange"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"
            android:layout_below="@+id/description"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TableLayout
            android:id="@+id/profile_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/line1">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Coach"
                    android:textSize="15dp"
                    android:layout_weight="0"/>
                <EditText
                    android:id="@+id/coach"
                    style="@style/table_edittext_type"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"/>
                <TextView
                    android:text="Distributor"
                    android:textSize="15dp"
                    android:layout_weight="0"/>
                <EditText
                    android:id="@+id/distributor"
                    style="@style/table_edittext_type"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Coachee"
                    android:textSize="15dp"
                    android:layout_weight="0"/>
                <EditText
                    android:id="@+id/coachee"
                    style="@style/table_edittext_type"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"/>
                <TextView
                    android:text="Area"
                    android:textSize="15dp"
                    android:layout_weight="0"/>
                <EditText
                    android:id="@+id/area"
                    style="@style/table_edittext_type"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
        <HorizontalScrollView
            android:id="@+id/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/profile_line">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:shrinkColumns="*">
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text=""
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="5"/>
                    <TextView
                        android:text="Thick if Done/know"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="7"
                        android:gravity="center_horizontal"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:text=""
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="5"/>
                    <TextView
                        android:text="TOP SKU PRODUCT"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="7"
                        android:gravity="center_horizontal"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:text=""
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="5"/>
                    <TextView
                        android:text="@string/product_1"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_2"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_3"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_4"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_5"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_6"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_7"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_8"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_9"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/product_10"
                        style="@style/column_customer_header_fa"/>
                    <EditText
                        android:id="@+id/product_11"
                        android:hint="Product"
                        style="@style/table_edittext_type_header_fa"/>
                    <EditText
                        android:hint="Product"
                        android:id="@+id/product_12"
                        style="@style/table_edittext_type_header_fa"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:text=""
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="5"/>
                    <TextView
                        android:text="@string/size_1"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_2"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_3"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_4"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_5"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_6"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_7"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_8"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_9"
                        style="@style/column_customer_header_fa"/>
                    <TextView
                        android:text="@string/size_10"
                        style="@style/column_customer_header_fa"/>
                    <EditText
                        android:id="@+id/size_11"
                        android:hint="Size"
                        style="@style/table_edittext_type_header_fa"/>
                    <EditText
                        android:hint="Size"
                        android:id="@+id/size_12"
                        style="@style/table_edittext_type_header_fa"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/bahasa_fa_title_1"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="5"/>
                    <TextView
                        android:text=""
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_weight="7"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </RelativeLayout>
</ScrollView>
